--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,10 @@
   .trans {
       float: left;
       background: aquamarine;
+      padding: 10px;
+      margin: 20px;
+      width: 300px;
+      height: 40px;
   }
 
   #redcrystal {
